--- a/SquiLu/squilu.cbp
+++ b/SquiLu/squilu.cbp
@@ -290,7 +290,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-Os" />
+					<Add option="-O2" />
 					<Add option="-Wall" />
 					<Add option="-DNEED_SUBLATIN_C=1" />
 					<Add option="-DSQUILU_ALONE=1" />
@@ -436,6 +436,8 @@
 					<Add library="mpdecimal" />
 					<Add library="hpdfs" />
 					<Add library="discount" />
+					<Add library="X11" />
+					<Add library="fontconfig" />
 					<Add directory="../../zeromq-3.2.2" />
 					<Add directory="../fltk/lib" />
 					<Add directory="../flu" />
@@ -471,6 +473,108 @@
 					<Add library="fltk_z" />
 					<Add directory="../../zeromq-3.2.2" />
 					<Add directory="../fltk/lib" />
+				</Linker>
+			</Target>
+			<Target title="Release FLTK 64bits Lib">
+				<Option output="bin/libsquilu" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="obj/Release/" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-fomit-frame-pointer" />
+					<Add option="-fexpensive-optimizations" />
+					<Add option="-O3" />
+					<Add option="-Wall" />
+					<Add option="-g" />
+					<Add option="-DWITH_FLTK=1" />
+					<Add option="-DNDEBUG=1" />
+					<Add option="-DWITH_FULL_DAD_EXTRAS=1" />
+					<Add option="-DPROFILE_SQVM22=1" />
+					<Add option="-D_SQ64=1" />
+					<Add option="-DCONFIG_64=1" />
+					<Add option="-DHAS_UNIX_DOMAIN_SOCKETS=1" />
+					<Add option="-DUSE_SIGNAL_HANDLER=1" />
+					<Add directory="../../zeromq-3.2.2/include" />
+					<Add directory="../fltk" />
+					<Add directory="../libharu/include" />
+					<Add directory="../flu" />
+				</Compiler>
+				<Linker>
+					<Add library="../../zeromq-3.2.2/libzmq3.a" />
+					<Add library="pthread" />
+					<Add library="rt" />
+					<Add library="dl" />
+					<Add library="axtls" />
+					<Add library="fltkutils" />
+					<Add library="fltk_images" />
+					<Add library="fltk_png" />
+					<Add library="fltk_jpeg" />
+					<Add library="fltk_z" />
+					<Add library="fltk" />
+					<Add library="Xext" />
+					<Add library="Xft" />
+					<Add library="Xinerama" />
+					<Add library="mpdecimal" />
+					<Add library="hpdfs" />
+					<Add library="discount" />
+					<Add library="X11" />
+					<Add library="fontconfig" />
+					<Add directory="../../zeromq-3.2.2" />
+					<Add directory="../fltk/lib" />
+					<Add directory="../flu" />
+					<Add directory="../libharu/src" />
+				</Linker>
+			</Target>
+			<Target title="Release FLTK 64bits Computed Gotos">
+				<Option output="bin/squilu" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-fomit-frame-pointer" />
+					<Add option="-fexpensive-optimizations" />
+					<Add option="-O3" />
+					<Add option="-Wall" />
+					<Add option="-DWITH_FLTK=1" />
+					<Add option="-DNDEBUG=1" />
+					<Add option="-DWITH_FULL_DAD_EXTRAS=1" />
+					<Add option="-DPROFILE_SQVM22=1" />
+					<Add option="-D_SQ64=1" />
+					<Add option="-DCONFIG_64=1" />
+					<Add option="-DHAS_UNIX_DOMAIN_SOCKETS=1" />
+					<Add option="-DUSE_SIGNAL_HANDLER=1" />
+					<Add option="-DUSE_COMPUTED_GOTOS=1" />
+					<Add directory="../../zeromq-3.2.2/include" />
+					<Add directory="../fltk" />
+					<Add directory="../libharu/include" />
+					<Add directory="../flu" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add library="../../zeromq-3.2.2/libzmq3.a" />
+					<Add library="pthread" />
+					<Add library="rt" />
+					<Add library="dl" />
+					<Add library="axtls" />
+					<Add library="fltkutils" />
+					<Add library="fltk_images" />
+					<Add library="fltk_png" />
+					<Add library="fltk_jpeg" />
+					<Add library="fltk_z" />
+					<Add library="fltk" />
+					<Add library="Xext" />
+					<Add library="Xft" />
+					<Add library="Xinerama" />
+					<Add library="mpdecimal" />
+					<Add library="hpdfs" />
+					<Add library="discount" />
+					<Add library="X11" />
+					<Add library="fontconfig" />
+					<Add directory="../../zeromq-3.2.2" />
+					<Add directory="../fltk/lib" />
+					<Add directory="../flu" />
+					<Add directory="../libharu/src" />
 				</Linker>
 			</Target>
 		</Build>
@@ -513,6 +617,7 @@
 			<Add option="-DSSL_STATIC_LIBRARY=1" />
 			<Add option="-DPDF_USING_ZLIB=1" />
 			<Add option="-DRS232_STATIC=1" />
+			<Add option="-DWITH_UUID=1" />
 			<Add directory="include" />
 			<Add directory="sqstdlib" />
 			<Add directory="../myaxtls" />
@@ -525,11 +630,13 @@
 			<Add directory="../SquiLu-ext" />
 			<Add directory="/usr/include/mysql" />
 			<Add directory="../gumbo" />
+			<Add directory="../minizip" />
 		</Compiler>
 		<Linker>
 			<Add library="m" />
 			<Add library="uuid" />
 			<Add library="gumbo" />
+			<Add library="../minizip/libminizip.a" />
 			<Add directory="lib" />
 			<Add directory="../myaxtls" />
 			<Add directory="../mpdecimal" />
@@ -564,6 +671,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/dynamic_library.h">
 			<Option target="Debug" />
@@ -578,6 +687,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/fpdf.cpp">
 			<Option target="Debug" />
@@ -592,6 +703,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/fpdf.h">
 			<Option target="Debug" />
@@ -606,6 +719,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/lua_socket.cpp">
 			<Option target="Debug" />
@@ -620,6 +735,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/lua_socket.h">
 			<Option target="Debug" />
@@ -634,6 +751,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/mongoose.c">
 			<Option compilerVar="CC" />
@@ -649,6 +768,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/mongoose.h">
 			<Option target="Debug" />
@@ -663,6 +784,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/pdf-font.cpp">
 			<Option target="Debug" />
@@ -677,6 +800,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/pdf-font.h">
 			<Option target="Debug" />
@@ -691,6 +816,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_axtls.c">
 			<Option compilerVar="CC" />
@@ -706,6 +833,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_base64.cpp">
 			<Option target="Debug" />
@@ -720,6 +849,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_decimal.cpp">
 			<Option target="Debug" />
@@ -733,6 +864,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_fastcgi.cpp">
 			<Option target="&lt;{~None~}&gt;" />
@@ -750,6 +883,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_fpdf.cpp">
 			<Option target="Debug" />
@@ -764,6 +899,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_fs.c">
 			<Option compilerVar="CC" />
@@ -779,6 +916,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_gumbo.cpp" />
 		<Unit filename="../SquiLu-ext/sq_markdown.cpp">
@@ -793,6 +932,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mix.cpp">
 			<Option target="Debug" />
@@ -807,6 +948,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mongoose.cpp">
 			<Option target="Debug" />
@@ -821,6 +964,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mysql.cpp" />
 		<Unit filename="../SquiLu-ext/sq_parsecsv.cpp">
@@ -835,6 +980,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_postgresql.cpp">
 			<Option target="Debug" />
@@ -848,6 +995,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_rs232.c">
 			<Option compilerVar="CC" />
@@ -863,6 +1012,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_slave_vm.cpp">
 			<Option target="Debug" />
@@ -877,6 +1028,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_socket.cpp">
 			<Option target="Debug" />
@@ -891,6 +1044,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_sqlite3.cpp">
 			<Option target="Debug" />
@@ -905,6 +1060,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_sys.cpp">
 			<Option target="&lt;{~None~}&gt;" />
@@ -922,6 +1079,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_zlib.cpp">
 			<Option target="Debug" />
@@ -936,6 +1095,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_zmq3.cpp">
 			<Option target="Debug" />
@@ -949,6 +1110,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqlite3.c">
 			<Option compilerVar="CC" />
@@ -964,6 +1127,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqlite3.h">
 			<Option target="Debug" />
@@ -978,6 +1143,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqmodule.h">
 			<Option target="Debug" />
@@ -992,6 +1159,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqratimport.cpp">
 			<Option target="Debug" />
@@ -1006,6 +1175,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqratimport.h">
 			<Option target="Debug" />
@@ -1020,6 +1191,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/tinyxml2.cpp">
 			<Option target="Debug" />
@@ -1034,6 +1207,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/tinyxml2.h">
 			<Option target="Debug" />
@@ -1048,6 +1223,8 @@
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
 			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Lib" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="dadbiz.rc">
 			<Option compilerVar="WINDRES" />
@@ -1064,6 +1241,21 @@
 		<Unit filename="include/squirrel.h" />
 		<Unit filename="sq/sq.c">
 			<Option compilerVar="CC" />
+			<Option target="Debug" />
+			<Option target="Release" />
+			<Option target="Release clang" />
+			<Option target="Release win32" />
+			<Option target="Release FLTK" />
+			<Option target="Debug FLTK" />
+			<Option target="Release FLTK win32" />
+			<Option target="Release FLTK win32 no console" />
+			<Option target="Release alone" />
+			<Option target="Release alone wince" />
+			<Option target="Release wince" />
+			<Option target="Release 64bits" />
+			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
+			<Option target="Release FLTK 64bits Computed Gotos" />
 		</Unit>
 		<Unit filename="sqstdlib/sqstdaux.cpp" />
 		<Unit filename="sqstdlib/sqstdblob.cpp" />
